<resources>
    <string name="app_name">Find My Pet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_Search">Search</string>
    <string name="title_post">New Post</string>
    <string name="title_notifications">Notifications</string>
    <string name="fatih_terim_sample_caption">Yeni bir Eylül ayının başka bir dördüncü günü geride kalırken, duygularımı anlatabilmem pek kolay değil. Ama deneyeceğim… Yıllar geçiyor, hatıralar artıyor; sevinçler de durmuyor hüzünler de, hayat devam ederken belki eskisi gibi olmuyor birçok şey ama bu sevgiyi hayattayken, birebir görmek ve bizzat yaşamak çok güzel. Her sene tam da bugün hissettiklerim hep samimi, hep çok özel ve tarifi her defasında daha da zor. Günün ilk saniyesinden itibaren tüm güzel sözleri, mesajları ve sevgisiyle kalbimi dolduran aileme, dostlarıma, kulübüm Galatasaray’a, İtalya’daki evim Fiorentina’ya, Türkiye’deki ve dünyanın dört bir yanındaki meslektaşlarıma, birlikte çalıştığım tüm arkadaşlarıma, çoğunu evladım olarak gördüğüm oyuncularıma ve başta Galatasaray taraftarı olmak üzere varlıklarıyla beni daha güçlü kılan herkese çok teşekkür ederim. İyi ki varsınız..</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="login_forget_password">Forgot the password?</string>
    <string name="login_to_signup">Do not have an account? Sign Up</string>
    <string name="login_button">Log In</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="post_hint">What do you want to talk about?</string>
    <string name="chats">Bastards</string>
    <string name="view_likes">Liked by</string>
    <string name="comments">comments</string>
    <string name="viewpost_toolbar">MY POSTS</string>
    <string name="follow">FOLLOW</string>
    <string name="followers_toolbar">FOLLOWERS</string>
    <string name="following_toolbar">FOLLOWINGS</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>